Cleanups, reduce compilation warnings.